docs(swagger): swagger main func note update
