# api/swagger/swagger.json
@@ -1,4 +1,7 @@
 {
+    "schemes": [
+        "https"
+    ],
     "swagger": "2.0",
     "info": {
         "description": "Go编写的个人网站后台接口",
@@ -6,6 +9,8 @@
         "contact": {},
         "version": "0.0.1"
     },
+    "host": "https://promonkeyli.top:8080",
+    "basePath": "/api/v1",
     "paths": {
         "/login": {
             "post": {
@@ -350,11 +355,14 @@
             ]
         }
     },
-    "securityDefinitions": {
-        "ApiKeyAuth  API的认证方式": {
-            "type": "apiKey",
-            "name": "Authorization  后端获取认证值得方式",
-            "in": "header 发送认证的方式"
+    "tags": [
+        {
+            "description": "用户相关的操作",
+            "name": "user"
+        },
+        {
+            "description": "工具相关的操作",
+            "name": "tool"
         }
-    }
+    ]
 }
